# AlgoTrader3.0

./: .gitignore  .replit  app.py  automated_trader.py  bybit_client.py  db.py  engine.py  ml.py  pyproject.toml  replit.md  requirements.txt  settings.json  settings.py  signal_generator.py  utils.py
.streamlit/: config.toml
pages/: automation.py  dashboard.py  logs.py  ml.py  orders.py  portfolio.py  positions.py  settings.py  signals.py
views/: automation.py  dashboard.py  logs.py  ml.py  orders.py  portfolio.py  positions.py  settings.py  signals.py
